syntax = "proto3";
package com.cloudbeds.user;

option java_multiple_files = true;
option java_package = "com.cloudbeds.user.lib";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUsersByFirstName (NameRequest) returns (UserResponse) {
  }
}

message NameRequest {
  string firstName = 1;
}

message User {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
}

message UserResponse {
  repeated User users = 1;
}